# hyundai_robot

./: README.md
ros2_hi6/: package.xml  setup.py
ros2_hi6/launch/: hyundai_robot.rviz  ros2_hi6.launch.py
ros2_hi6/ros2_hi6/: joint_trajectory.py
ros2_hi6/src/: web_service.py
ros2_hi6_msgs/: CMakeLists.txt  package.xml
ros2_hi6_test/: setup.cfg  setup.py
