<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_hi6</name>
  <version>0.0.0</version>
  <description>Interface package between ros2 and hi6</description>
  <author email="hajung815@gmail.com">hajung</author>
  <maintainer email="hajung815@gmail.com">hajung</maintainer>
  <license>BSD</license>
  <url type="website">http://www.hyundai-robotics.com</url>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <exec_depend>ros2_hi6_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
